--- a/.editorconfig
+++ b/.editorconfig
@@ -19,6 +19,10 @@ trim_trailing_whitespace = false
 indent_style = tab
 indent_size = 4
 
+[*.ps1]
+indent_style = tab
+indent_size = 4
+
 # C# code style rules
 [*.cs]
 csharp_new_line_before_open_brace = all
