--- a/SideroLabs.Omni.Api.Tests/SideroLabs.Omni.Api.Tests.csproj
+++ b/SideroLabs.Omni.Api.Tests/SideroLabs.Omni.Api.Tests.csproj
@@ -42,6 +42,9 @@
 		<None Update="appsettings.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<None Update="TestData\pgp-key-test.txt">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 	</ItemGroup>
 
 	<PropertyGroup>
