Code tidy and moved to warnings as errors.

--- a/SideroLabs.Omni.Api.Tests/SideroLabs.Omni.Api.Tests.csproj
+++ b/SideroLabs.Omni.Api.Tests/SideroLabs.Omni.Api.Tests.csproj
@@ -8,6 +8,7 @@
 		<IsTestProject>true</IsTestProject>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 		<WarningsAsErrors />
+		<MSBuildTreatWarningsAsErrors>true</MSBuildTreatWarningsAsErrors>
 	</PropertyGroup>
 
 	<ItemGroup>
