--- a/SideroLabs.Omni.Api.Tests/SideroLabs.Omni.Api.Tests.csproj
+++ b/SideroLabs.Omni.Api.Tests/SideroLabs.Omni.Api.Tests.csproj
@@ -33,6 +33,7 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.9" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.9" />
+		<PackageReference Include="YamlDotNet" Version="16.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
