--- a/SideroLabs.Omni.Api/SideroLabs.Omni.Api.csproj
+++ b/SideroLabs.Omni.Api/SideroLabs.Omni.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net9.0</TargetFramework>
@@ -7,6 +7,9 @@
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 		<WarningsAsErrors />
 		<MSBuildTreatWarningsAsErrors>true</MSBuildTreatWarningsAsErrors>
+		
+		<!-- Suppress protobuf compiler warnings -->
+		<NoWarn>$(NoWarn);Protobuf1591</NoWarn>
 
 		<!-- Package Information -->
 		<PackageId>SideroLabs.Omni.Api</PackageId>
@@ -23,11 +26,20 @@
 		<PackageTags>siderolabs;omni;grpc;api;kubernetes;talos;management;pgp</PackageTags>
 		<PackageReleaseNotes>Client implementation for SideroLabs Omni Management API via gRPC</PackageReleaseNotes>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<PackageIcon>Logo.png</PackageIcon>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <Compile Remove="Models\Requests\**" />
+	  <Compile Remove="Models\Responses\**" />
+	  <EmbeddedResource Remove="Models\Requests\**" />
+	  <EmbeddedResource Remove="Models\Responses\**" />
+	  <None Remove="Models\Requests\**" />
+	  <None Remove="Models\Responses\**" />
+	</ItemGroup>
 
 	<!-- Expose internals to test project -->
 	<ItemGroup>
@@ -38,6 +50,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="BouncyCastle.Cryptography" Version="2.6.2" />
+		<PackageReference Include="FluentValidation" Version="12.0.0" />
 		<PackageReference Include="Nerdbank.GitVersioning" Version="3.7.115">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
@@ -53,6 +66,7 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.9" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
 		<PackageReference Include="Grpc.AspNetCore" Version="2.71.0" />
+		<PackageReference Include="YamlDotNet" Version="16.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -63,13 +77,11 @@
 	<!-- Enable protobuf compilation with proper include paths -->
 	<ItemGroup>
 		<Protobuf Include="Protos\management.proto" GrpcServices="Client" ProtoRoot="Protos" />
+		<Protobuf Include="Protos\omni\resources\resources.proto" GrpcServices="Client" ProtoRoot="Protos" />
+		<Protobuf Include="Protos\v1alpha1\resource.proto" GrpcServices="None" ProtoRoot="Protos" />
 		<Protobuf Include="Protos\common\common.proto" GrpcServices="None" ProtoRoot="Protos" />
 		<Protobuf Include="Protos\omni.proto" GrpcServices="None" ProtoRoot="Protos" />
 		<Protobuf Include="Protos\google\rpc\status.proto" GrpcServices="None" ProtoRoot="Protos" />
-	</ItemGroup>
-	<ItemGroup>
-		<Folder Include="Models\Requests\" />
-		<Folder Include="Models\Responses\" />
 	</ItemGroup>
 
 </Project>
